# HaskBot

./: .gitattributes  CHANGELOG.md.save0  HaskBot.cabal  HaskBot.cabal.save0  HaskBot_Development_Scope  LICENSE  README.md
app/: DataFetcher.hs  IndicatorEngine.hs  Main.hs  RiskManager.hs  SignalGenerator.hs  UserInterface.hs  WebSocketConnector.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: DataFetcher.hs_back_uo.txt  LigthPaper.md
src/: DataFetcher.hs  DataProcessor.hs  DisplayManager.hs  IndicatorEngine.hs  Main.hs  SignalGenerator.hs
test/: DataFetcherSpec.hs  DataFetcherTest.hs  DataProcessorTest.hs  DisplayManagerTest.hs  IndicatorEngineSpec.hs  IndicatorEngineTest.hs  Main.hs  MainTest.hs  SignalGeneratorSpec.hs  SignalGeneratorTest.hs  UserInterfaceSpec.hs  WebSocketConnectorSpec.hs
